Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o r18040 on server side
   - Handle recovery of session on startup for changed passwords in htpasswd
   - Added cluster forward for administratice commands
   - SessionPersistencePlugin passes secretSessionId for reuse, else persistent subscribes are not working since fix of r18029

 o r18036-r18038 xmlBlasterPlugins.xml does now ${xy} replacement (before there was no such support)
          You can switch replacement off with the 'replace' attribute, for example:
          <attribute id='port' replace='false'>${socketPort}</attribute>

 o r18029 Bugfixes on server side:
   - client ping throws exception now if the callback listener exists but there is no associated session to it (happens on race 
     conditions between connect and disconnect): now the client is notified on stale session by communication exception.
   - race condition for disconnect vs re-connect of same client with negative pubSessionId and non-failsafe 
   - for socket and email set proper sessionName on Connection (was empty)

 o r18021 fixed wrong subId coming from Master's returnQos in cluster environment to the original client's subId

 o r18015 Fixed StringPairTokenizer#parseLine:
          if token contains separator and was escaped by apostroph: The first apostroph was sometimes not removed
          Increased performance by using StringBuilder.setLength(0) instead of creating a new instance

 o r18013 Fixed reconnect race condition with socket protocol
          Example for mobile phones: When network goes down (e.g. in a tunnel) and phone reconnects therafter
          the cleanup of the old,stale connection was 5 sec delayed and the POLLING event came too late for DropOnPolling plugin

Changes for 2.1.0 [2011-10-12] r18009 (JDK >= 1.5 only)
=======================================================
